# UTMS

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  LICENSE  README.md
cmake/: CompilerOptions.cmake  Dependencies.cmake  Install.cmake  ReleaseValidation.cmake  VerifyRelease.cmake
config/: amap.example.json
docs/: PRD-phase2.md  PRD-phase3.md  PRD.md  acceptance-checklist.md  code-standards.md  media_test.md  offline-tiles.md  runtime-logs.md
docs/adr/: 0001-latest-frame-video-inference.md  0002-separate-video-decode-and-inference-workers.md  0003-record-from-primary-rtsp-session.md  0004-isolate-phase3-radar-frame-branches.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
models/yolo26/: model.json
resources/: resources.qrc
resources/map/: online_map.html
scripts/: prepare_yolo.py  udp_simulator.py
src/: CMakeLists.txt  main.cpp
src/alert/: AlertCsvExporter.cpp  AlertCsvExporter.h  AlertEngine.cpp  AlertEngine.h  AlertTypes.cpp  AlertTypes.h  AlertWorker.cpp  AlertWorker.h  CMakeLists.txt
src/core/: CMakeLists.txt  GeofenceGeometry.cpp  GeofenceGeometry.h  GeofenceTypes.cpp  GeofenceTypes.h  Logger.cpp  Logger.h  LoginCredentialValidator.cpp  LoginCredentialValidator.h  RadarFrameStore.cpp  RadarFrameStore.h  RadarJsonParser.cpp  RadarJsonParser.h  RadarTypes.cpp  RadarTypes.h  SystemMetricsProvider.cpp  SystemMetricsProvider.h  SystemMetricsSampler.cpp  SystemMetricsSampler.h
src/history/: CMakeLists.txt  HistoryController.cpp  HistoryController.h  HistoryCsvExporter.cpp  HistoryCsvExporter.h  HistoryPlaybackController.cpp  HistoryPlaybackController.h  HistorySamplingPolicy.cpp  HistorySamplingPolicy.h  HistoryStore.cpp  HistoryStore.h  HistoryTypes.h
src/map/: AmapConfig.cpp  AmapConfig.h  CMakeLists.txt  OnlineMapState.cpp  OnlineMapState.h  RealtimeTrajectoryModel.cpp  RealtimeTrajectoryModel.h  WebMercator.cpp  WebMercator.h
src/media/: CMakeLists.txt  LatestVideoFrameBuffer.cpp  LatestVideoFrameBuffer.h  RtspController.cpp  RtspController.h  RtspDecoderWorker.cpp  RtspDecoderWorker.h  RtspRecorder.cpp  RtspRecorder.h  RtspStateMachine.cpp  RtspStateMachine.h  VideoDetection.cpp  VideoDetection.h  VideoInferenceController.cpp  VideoInferenceController.h  VideoRecordingFileNamer.cpp  VideoRecordingFileNamer.h  VideoRecordingSession.cpp  VideoRecordingSession.h  YoloInferenceWorker.cpp  YoloInferenceWorker.h  YoloModelConfig.cpp  YoloModelConfig.h  YoloPostProcessor.cpp  YoloPostProcessor.h
src/network/: CMakeLists.txt  UdpReceiver.cpp  UdpReceiver.h
src/ui/: AlertCenterWidget.cpp  AlertCenterWidget.h  AlertNotificationWidget.cpp  AlertNotificationWidget.h  AlertRuleManagerWidget.cpp  AlertRuleManagerWidget.h  BottomStatusBar.cpp  BottomStatusBar.h  CMakeLists.txt  GeofenceManagerWidget.cpp  GeofenceManagerWidget.h  HistoryQueryWidget.cpp  HistoryQueryWidget.h  LoginDialog.cpp  LoginDialog.h  MapPanel.cpp  MapPanel.h  MapWebBridge.cpp  MapWebBridge.h  OfflineMapWidget.cpp  OfflineMapWidget.h  OnlineMapWidget.cpp  OnlineMapWidget.h  StatisticsWidget.cpp  StatisticsWidget.h  SystemMonitorWidget.cpp  SystemMonitorWidget.h  VideoStreamWidget.cpp  VideoStreamWidget.h  mainwindow.cpp  mainwindow.h
src/workbench/: CMakeLists.txt  TrackFilterProxyModel.cpp  TrackFilterProxyModel.h  TrackTableModel.cpp  TrackTableModel.h  TrackTableWidget.cpp  TrackTableWidget.h
tests/: CMakeLists.txt  rtsp_recording_acceptance.cpp  test_alert_center_widget.cpp  test_alert_engine.cpp  test_alert_persistence.cpp  test_geofence.cpp  test_history_playback.cpp  test_history_query_widget.cpp  test_history_store.cpp  test_login_credentials.cpp  test_map_interaction.cpp  test_radarcore.cpp  test_realtime_trajectory.cpp  test_release_validation.cmake  test_rtsp_state_machine.cpp  test_system_metrics.cpp  test_system_monitor_widget.cpp  test_track_workbench.cpp  test_video_inference.cpp  test_video_recording.cpp  test_yolo_runtime.cpp  video_performance_acceptance.cpp
